# laneq

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  test_grpc_integration.py
.github/workflows/: buf-format-check.yml  buf-lint-breaking.yml  diagram-freshness.yml  secret-scan.yml  test.yml
docs/architecture/: system-context.md
proto/: laneq.proto
src/codex_q/: __init__.py  cli.py
src/laneq/: __init__.py  auth.py  cli.py  core.py  grpc_auth.py  grpc_server.py  mcp_server.py
src/laneq/grpc/: __init__.py  laneq_pb2.py  laneq_pb2.pyi  laneq_pb2_grpc.py
tests/: test_auth.py  test_cli.py  test_core.py  test_grpc_auth.py  test_grpc_handlers.py  test_grpc_server.py  test_grpc_status_codes.py  test_mcp_server.py  test_otel_wiring.py  test_pr_workflow_cancellation.py  test_proof.py
