[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "laneq"
version = "0.4.0"
description = "A tiny local SQLite priority queue for feeding directives to autonomous agents and orchestrators."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Selamy Labs" },
]
keywords = ["agents", "automation", "cli", "priority-queue", "sqlite"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
grpc = [
  "grpcio>=1.48",
  "grpcio-tools>=1.48",
  "protobuf>=3.20",
]
mcp = [
  "mcp>=1.2",
]
# Vendor-neutral OpenTelemetry auto-instrumentation (#743). Install alongside
# `mcp`, then run the server under `opentelemetry-instrument` (see README) so
# spans export via OTLP to a collector — never the console exporter, which would
# corrupt the stdio JSON-RPC stream. The collector owns any Cloud Trace coupling.
otel = [
  "opentelemetry-distro>=0.48b0",
  "opentelemetry-exporter-otlp>=1.27",
]
test = [
  "coverage[toml]>=7.6",
  "grpcio>=1.48",
  "grpcio-tools>=1.48",
  "mcp>=1.2",
  "protobuf>=3.20",
  "pytest>=8.3",
  "pytest-asyncio>=0.21",
  "ruff>=0.8",
]

[project.scripts]
laneq = "laneq.cli:main"
codex-q = "laneq.cli:main"
laneq-mcp = "laneq.mcp_server:main"
laneq-grpc = "laneq.grpc_server:main"

[project.urls]
Homepage = "https://github.com/selamy-labs/laneq"
Repository = "https://github.com/selamy-labs/laneq"
Issues = "https://github.com/selamy-labs/laneq/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/laneq"]

[tool.coverage.run]
branch = true
source = ["laneq"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [
  "src/laneq/grpc/laneq_pb2.py",
  "src/laneq/grpc/laneq_pb2_grpc.py",
  "src/laneq/grpc/laneq_pb2.pyi",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C90", "RUF"]

[tool.ruff.lint.mccabe]
max-complexity = 12
